--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Contact</h1>
+<h1>New <%= @contact.type %> Contact</h1>
 
 <%= render 'form', contact: @contact %>
 
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Back', user_path(@user) %>
