--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,16 +34,7 @@
   </thead>
   <tbody>
     <% @user.emergencies.each do |contact| %>
-      <tr>
-        <td><%= contact.first_name %></td>
-        <td><%= contact.last_name %></td>
-        <td><%= contact.phone_number %></td>
-        <td><%= contact.birthday %></td>
-        <td>
-          <%= link_to 'Edit', edit_user_emergency_path(@user, contact) %> |
-          <%= link_to 'Delete', [@user, contact], method: :delete %>
-        </td>
-      </tr>
+      <%= render 'users/show/table_body', user: @user, contact: contact %>
     <% end %>
   </tbody>
 </table>
@@ -62,16 +53,7 @@
   </thead>
   <tbody>
     <% @user.friends.each do |contact| %>
-      <tr>
-        <td><%= contact.first_name %></td>
-        <td><%= contact.last_name %></td>
-        <td><%= contact.phone_number %></td>
-        <td><%= contact.birthday %></td>
-        <td>
-          <%= link_to 'Edit', edit_user_friend_path(@user, contact) %> |
-          <%= link_to 'Delete', [@user, contact], method: :delete %>
-        </td>
-      </tr>
+      <%= render 'users/show/table_body', user: @user, contact: contact %>
     <% end %>
   </tbody>
 </table>
