--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New <%= @contact.type %> Contact</h1>
 
-<%= render 'form', contact: @contact %>
+<%= render 'form', contact: @contact, user: @user %>
 
 <%= link_to 'Back', user_path(@user) %>
